[project]
name = "happy-stock-graphql"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "nakao keisuke", email = "r3grashopper193@gmail.com" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.5.4",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/happy_stock_graphql"]
