[project]
name = "happy-stock-graphql"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "nakao keisuke", email = "r3grashopper193@gmail.com" }
]
dependencies = [
    "fastapi>=0.111.1",
    "uvicorn>=0.30.3",
    "sqlalchemy>=2.0.31",
    "strawberry-graphql>=0.236.0",
]
readme = "README.md"
requires-python = ">= 3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.5.4",
    "mypy>=1.11.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/happy_stock_graphql"]
